--- a/pub/wefound.yaml
+++ b/pub/wefound.yaml
@@ -6,33 +6,17 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: 172.67.204.84
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
-  - &id002
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
+    name: 🇱🇺_LU_卢森堡
     type: vmess
-    server: 23.227.38.22
-    port: 8080
+    server: 78.111.102.232
+    port: 3389
     cipher: auto
-    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
-      headers:
-        host: per-essex-patterns-bowling.trycloudflare.com
-  - &id003
+    network: http
+  - &id002
     name: 🇺🇸_US_美国_1
     type: vmess
     server: yh1.dtku41.xyz
@@ -47,22 +31,177 @@ proxies:
       path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
       headers:
         host: per-essex-patterns-bowling.trycloudflare.com
+  - &id003
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_1
+    type: trojan
+    server: 23.227.38.11
+    port: 443
+    udp: true
+    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
+    sni: syndication-statutes-wanted-logo.trycloudflare.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /argox-tr
   - &id004
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 23.227.38.23
+    server: 162.159.130.208
     port: 8080
     cipher: auto
-    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
+    uuid: 55021a7c-bd6c-418e-be95-ceac8ba27b45
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
+      path: 55021a7c-bd6c-418e-be95-ceac8ba27b45-vm
       headers:
-        host: uh-lawyers-instruments-kernel.trycloudflare.com
+        host: widescreen-instruction-breakdown-postage.trycloudflare.com
   - &id005
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_1
+    type: vmess
+    server: 218.204.179.210
+    port: 50022
+    cipher: auto
+    uuid: e80442e2-4577-4b33-8d9b-798d816974bd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: vmess
+    server: 183.232.159.163
+    port: 50003
+    cipher: auto
+    uuid: e80442e2-4577-4b33-8d9b-798d816974bd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id007
+    name: 🇩🇪_DE_德国
+    type: trojan
+    server: 3.77.70.24
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.miwan.co.uk
+    skip-cert-verify: false
+    network: tcp
+  - &id008
+    name: 🇱🇹_LT_立陶宛
+    type: vmess
+    server: yh3.freeh1.xyz
+    port: 8080
+    cipher: auto
+    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
+      headers:
+        host: larger-marketing-amounts-skin.trycloudflare.com
+  - &id009
+    name: 🇮🇪_IE_爱尔兰_1
+    type: trojan
+    server: 34.255.219.5
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trojan.miwan.co.uk
+    skip-cert-verify: false
+    network: tcp
+  - &id010
+    name: 🇺🇸_US_美国_3
+    type: vmess
+    server: russia.com
+    port: 8880
+    cipher: auto
+    uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id011
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港_2
+    type: vmess
+    server: 50022.baidu-cdn.top
+    port: 50022
+    cipher: auto
+    uuid: e80442e2-4577-4b33-8d9b-798d816974bd
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id012
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_1
+    type: vmess
+    server: s1c.v2.v001sss.xyz
+    port: 2082
+    cipher: auto
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: s1c.v2.v001sss.xyz
+  - &id013
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 104.26.4.57
+    port: 2095
+    cipher: auto
+    uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id014
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: russia.com
+    port: 2095
+    cipher: auto
+    uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id015
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: fbi.gov
+    port: 8080
+    cipher: auto
+    uuid: ef8c954e-014f-4b36-8273-9b5086afab34
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: ef8c954e-014f-4b36-8273-9b5086afab34-vm
+      headers:
+        host: bibliographic-sword-sequence-advertisers.trycloudflare.com
+  - &id016
     name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
     type: vmess
     server: 162.159.1.33
@@ -77,28 +216,24 @@ proxies:
       path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
       headers:
         host: pcs-referenced-camera-concerns.trycloudflare.com
-  - &id006
-    name: 🇺🇸_US_美国_2
+  - &id017
+    name: 🇨🇦_CA_加拿大
     type: vmess
-    server: russia.com
-    port: 8880
+    server: 134.122.41.160
+    port: 3389
     cipher: auto
-    uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id007
-    name: 🇺🇸_US_美国_3
+    network: http
+  - &id018
+    name: 🇺🇸_US_美国_7
     type: vmess
-    server: 172.67.130.140
-    port: 2082
+    server: www.velvetmountain.shop
+    port: 8080
     cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -106,38 +241,19 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: s1c.v2.v001sss.xyz
-  - &id008
-    name: 🇺🇸_US_美国_4
+        host: www.velvetmountain.shop
+  - &id019
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
     type: vmess
-    server: 162.159.134.23
-    port: 8080
+    server: 50003.baidu-cdn.top
+    port: 50003
     cipher: auto
-    uuid: 9b196b50-37f2-4f4b-b175-06273adc6207
+    uuid: e80442e2-4577-4b33-8d9b-798d816974bd
     alterId: 0
     tls: false
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 9b196b50-37f2-4f4b-b175-06273adc6207-vm
-      headers:
-        host: championship-bidding-oxygen-brochure.trycloudflare.com
-  - &id009
-    name: 🇺🇸_US_美国_5
-    type: vmess
-    server: cdn.yifenjichang.top
-    port: 2086
-    cipher: none
-    uuid: 900ceafc-30b8-4581-a305-31854f563e4f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 900ceafc-30b8-4581-a305-31854f563e4f
-      headers:
-        host: context-sing-pennsylvania-photography.trycloudflare.com
-  - &id010
+    network: tcp
+  - &id020
     name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
     server: 94.140.0.110
@@ -152,50 +268,76 @@ proxies:
       path: /
       headers:
         host: food.zhaal.ir
-  - &id011
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: yh2.dtku41.xyz
-    port: 8080
-    cipher: auto
-    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
-      headers:
-        host: per-essex-patterns-bowling.trycloudflare.com
-  - &id012
-    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_3
-    type: trojan
-    server: 23.227.38.11
-    port: 443
-    udp: true
-    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
-    sni: syndication-statutes-wanted-logo.trycloudflare.com
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /argox-tr
-  - &id013
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: yh1.freeh1.xyz
-    port: 8080
-    cipher: auto
-    uuid: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
-      headers:
-        host: larger-marketing-amounts-skin.trycloudflare.com
-  - &id014
+  - &id021
     name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 104.21.54.252
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.velvetmountain.shop
+  - &id022
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: yh2.freeh1.xyz
+    port: 8080
+    cipher: auto
+    uuid: ef8c954e-014f-4b36-8273-9b5086afab34
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: ef8c954e-014f-4b36-8273-9b5086afab34-vm
+      headers:
+        host: bibliographic-sword-sequence-advertisers.trycloudflare.com
+  - &id023
+    name: 🇮🇪_IE_爱尔兰_2
+    type: trojan
+    server: 54.78.101.239
+    port: 22222
+    udp: true
+    password: telegram-id-directvpn
+    sni: trojan.miwan.co.uk
+    skip-cert-verify: false
+    network: tcp
+  - &id024
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_2
+    type: vmess
+    server: 23.227.38.23
+    port: 8080
+    cipher: auto
+    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
+      headers:
+        host: uh-lawyers-instruments-kernel.trycloudflare.com
+  - &id025
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: 129.146.31.240
+    port: 25314
+    cipher: auto
+    uuid: bffbeb1e-b2ec-4b87-bd19-11f609fc4ec4
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /victorias
+  - &id026
+    name: 🇺🇸_US_美国_11
     type: vmess
     server: 172.67.143.192
     port: 8080
@@ -209,54 +351,25 @@ proxies:
       path: /
       headers:
         host: www.velvetmountain.shop
-  - &id015
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-    type: vmess
-    server: yh3.freeh1.xyz
-    port: 8080
-    cipher: auto
-    uuid: 028c8131-9e3e-4836-94ac-ea7f24d4d05a
-    alterId: 0
-    tls: false
+  - &id027
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: 172.67.204.84
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
     skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
-      headers:
-        host: nest-emily-healing-h.trycloudflare.com
-  - &id016
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id028
+    name: 🇺🇸_US_美国->🇫🇷_FR_法国_2
     type: vmess
-    server: 50003.baidu-cdn.top
-    port: 50003
+    server: 172.67.130.140
+    port: 2082
     cipher: auto
-    uuid: e80442e2-4577-4b33-8d9b-798d816974bd
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id017
-    name: 🇺🇸_US_美国_9
-    type: vmess
-    server: russia.com
-    port: 2095
-    cipher: auto
-    uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id018
-    name: 🇺🇸_US_美国->🇿🇦_ZA_南非
-    type: vmess
-    server: yhnsb3.shabijichang.com
-    port: 80
-    cipher: auto
-    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -264,11 +377,26 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: yhnsb3.shabijichang.com
-  - &id019
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
+        host: s1c.v2.v001sss.xyz
+  - &id029
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国_3
     type: vmess
-    server: fbi.gov
+    server: 23.227.38.22
+    port: 8080
+    cipher: auto
+    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
+      headers:
+        host: per-essex-patterns-bowling.trycloudflare.com
+  - &id030
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
+    type: vmess
+    server: yh1.freeh1.xyz
     port: 8080
     cipher: auto
     uuid: ef8c954e-014f-4b36-8273-9b5086afab34
@@ -280,36 +408,21 @@ proxies:
       path: ef8c954e-014f-4b36-8273-9b5086afab34-vm
       headers:
         host: bibliographic-sword-sequence-advertisers.trycloudflare.com
-  - &id020
-    name: 🇺🇸_US_美国_10
+  - &id031
+    name: 🇺🇸_US_美国_12
     type: vmess
-    server: 162.159.130.208
+    server: yh2.dtku41.xyz
     port: 8080
     cipher: auto
-    uuid: 55021a7c-bd6c-418e-be95-ceac8ba27b45
+    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 55021a7c-bd6c-418e-be95-ceac8ba27b45-vm
+      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
       headers:
-        host: widescreen-instruction-breakdown-postage.trycloudflare.com
-  - &id021
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
-    type: vmess
-    server: yh2.freeh1.xyz
-    port: 8080
-    cipher: auto
-    uuid: 028c8131-9e3e-4836-94ac-ea7f24d4d05a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
-      headers:
-        host: nest-emily-healing-h.trycloudflare.com
+        host: per-essex-patterns-bowling.trycloudflare.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -357,6 +470,16 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -383,6 +506,16 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
   - name: SELECT
     type: select
     proxies:
@@ -407,6 +540,16 @@ proxy-groups:
       - *id019
       - *id020
       - *id021
+      - *id022
+      - *id023
+      - *id024
+      - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
