--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,6 +6,109 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: vmess
+    server: 183.232.170.22
+    port: 30145
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id002
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: vmess
+    server: 183.232.170.22
+    port: 30032
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id003
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
+    type: vmess
+    server: 183.232.170.22
+    port: 30137
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id004
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
+    type: vmess
+    server: 183.232.170.22
+    port: 30147
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id005
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
+    type: vmess
+    server: 183.232.170.22
+    port: 30051
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id006
+    name: 🇨🇦_CA_加拿大_1
+    type: vmess
+    server: 134.122.41.160
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id007
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
+    type: vmess
+    server: 183.232.170.22
+    port: 30141
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id008
+    name: 🇨🇳_CN_中国
+    type: vmess
+    server: 223.113.130.55
+    port: 58080
+    cipher: auto
+    uuid: 75a68200-4d76-3eb6-b510-39b8e63b7823
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /db00
+      headers:
+        host: data-hk-2.cn-db.top
+  - &id009
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_7
+    type: vmess
+    server: 183.232.170.22
+    port: 30058
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id010
     name: 🇨🇳_CN_中国->🇵🇸_PS_巴勒斯坦
     type: vmess
     server: 183.232.170.22
@@ -16,143 +119,19 @@ proxies:
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id002
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: vmess
-    server: 183.232.170.22
-    port: 30013
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
-    type: vmess
-    server: 183.232.170.22
-    port: 30129
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id004
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: vmess
-    server: 183.232.170.22
-    port: 30141
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id005
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_4
-    type: vmess
-    server: 183.232.170.22
-    port: 30058
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id006
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_5
-    type: vmess
-    server: 183.232.170.22
-    port: 30139
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id007
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_6
-    type: vmess
-    server: 183.232.170.22
-    port: 30147
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id008
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_7
-    type: vmess
-    server: 183.232.170.22
-    port: 30137
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_8
-    type: vmess
-    server: 183.232.170.22
-    port: 30061
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_9
-    type: vmess
-    server: 183.232.170.22
-    port: 30145
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
   - &id011
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_10
-    type: vmess
-    server: 183.232.170.22
-    port: 30051
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_11
-    type: vmess
-    server: 183.232.170.22
-    port: 30032
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id013
-    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
-    type: vmess
-    server: 94.140.0.110
-    port: 8880
-    cipher: auto
-    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
-    alterId: 0
-    tls: false
+    name: 🇨🇦_CA_加拿大->🇺🇸_US_美国
+    type: trojan
+    server: 23.227.38.11
+    port: 443
+    udp: true
+    password: b17fa17d-13a0-4e8a-a398-8e549ea8b208
+    sni: syndication-statutes-wanted-logo.trycloudflare.com
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
-      headers:
-        host: food.zhaal.ir
-  - &id014
+      path: /argox-tr
+  - &id012
     name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
     type: vmess
     server: yh2.freeh1.xyz
@@ -167,38 +146,8 @@ proxies:
       path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
       headers:
         host: nest-emily-healing-h.trycloudflare.com
-  - &id015
+  - &id013
     name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-    type: vmess
-    server: fbi.gov
-    port: 8080
-    cipher: auto
-    uuid: ef8c954e-014f-4b36-8273-9b5086afab34
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: ef8c954e-014f-4b36-8273-9b5086afab34-vm
-      headers:
-        host: bibliographic-sword-sequence-advertisers.trycloudflare.com
-  - &id016
-    name: 🇺🇸_US_美国_1
-    type: vmess
-    server: 162.159.134.23
-    port: 8080
-    cipher: auto
-    uuid: 9b196b50-37f2-4f4b-b175-06273adc6207
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: 9b196b50-37f2-4f4b-b175-06273adc6207-vm
-      headers:
-        host: championship-bidding-oxygen-brochure.trycloudflare.com
-  - &id017
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
     type: vmess
     server: yh3.freeh1.xyz
     port: 8080
@@ -212,13 +161,13 @@ proxies:
       path: 82cb93a3-65a9-4dac-a2a7-d997b6c26d6a-vm
       headers:
         host: larger-marketing-amounts-skin.trycloudflare.com
-  - &id018
-    name: 🇺🇸_US_美国->🇫🇷_FR_法国
+  - &id014
+    name: 🇦🇪_AE_阿联酋->🇬🇧_GB_英国
     type: vmess
-    server: s1c.v2.v001sss.xyz
-    port: 2082
+    server: 94.140.0.110
+    port: 8880
     cipher: auto
-    uuid: 112ac36f-3f53-4e26-8371-d25c028e1b9a
+    uuid: 0d1bf26a-ce97-4707-a270-7f4d2ae37334
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -226,9 +175,94 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: s1c.v2.v001sss.xyz
+        host: food.zhaal.ir
+  - &id015
+    name: 🇺🇸_US_美国_1
+    type: vmess
+    server: russia.com
+    port: 8880
+    cipher: auto
+    uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id016
+    name: 🇨🇦_CA_加拿大_2
+    type: vmess
+    server: 23.227.38.23
+    port: 8080
+    cipher: auto
+    uuid: 34c0bb5e-c120-432d-9c58-bd7d82c7397b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: 34c0bb5e-c120-432d-9c58-bd7d82c7397b-vm
+      headers:
+        host: uh-lawyers-instruments-kernel.trycloudflare.com
+  - &id017
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_8
+    type: vmess
+    server: 183.232.170.22
+    port: 30139
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id018
+    name: 🇫🇷_FR_法国
+    type: vmess
+    server: 51.159.155.52
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
   - &id019
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_9
+    type: vmess
+    server: 183.232.170.22
+    port: 30013
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇱🇺_LU_卢森堡
+    type: vmess
+    server: 45.82.31.164
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id021
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_10
+    type: vmess
+    server: 183.232.170.22
+    port: 30129
+    cipher: auto
+    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
     type: vmess
     server: 162.159.1.33
     port: 8080
@@ -242,142 +276,99 @@ proxies:
       path: d9c5ec6a-a8d8-4732-8447-56fbd2f93e96-vm
       headers:
         host: pcs-referenced-camera-concerns.trycloudflare.com
-  - &id020
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 134.122.41.160
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id021
-    name: 🇱🇺_LU_卢森堡
-    type: vmess
-    server: 45.82.31.164
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id022
-    name: 🇫🇷_FR_法国
-    type: vmess
-    server: 51.159.155.52
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
   - &id023
-    name: 🇰🇷_KR_韩国->🇭🇰_HK_香港_1
+    name: 🇺🇸_US_美国_2
     type: vmess
-    server: 130.162.151.122
-    port: 32454
+    server: 162.159.130.208
+    port: 8080
     cipher: auto
-    uuid: 414365d6-12fb-3530-8135-ad14b8ad7726
+    uuid: 55021a7c-bd6c-418e-be95-ceac8ba27b45
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
-    servername: cache-hk-2.cn-db.top
     network: ws
     ws-opts:
-      path: /db00
+      path: 55021a7c-bd6c-418e-be95-ceac8ba27b45-vm
       headers:
-        host: cache-hk-2.cn-db.top
+        host: widescreen-instruction-breakdown-postage.trycloudflare.com
   - &id024
-    name: 🇨🇭_CH_瑞士->🇭🇰_HK_香港_1
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: 64.110.78.246
-    port: 21205
+    server: yh1.dtku41.xyz
+    port: 8080
     cipher: auto
-    uuid: 414365d6-12fb-3530-8135-ad14b8ad7726
+    uuid: 9258153a-dc97-4e39-9037-009abfc4fed0
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
-    servername: cache-hk-2.cn-db.top
     network: ws
     ws-opts:
-      path: /db00
+      path: 9258153a-dc97-4e39-9037-009abfc4fed0-vm
       headers:
-        host: cache-hk-2.cn-db.top
+        host: per-essex-patterns-bowling.trycloudflare.com
   - &id025
-    name: 🇨🇭_CH_瑞士->🇭🇰_HK_香港_2
+    name: 🇨🇳_CN_中国->🇨🇦_CA_加拿大
     type: vmess
-    server: 64.110.65.177
-    port: 25856
+    server: data-us-v1.shwjfkw.cn
+    port: 20401
     cipher: auto
-    uuid: 414365d6-12fb-3530-8135-ad14b8ad7726
+    uuid: b1478e24-4916-3abe-8f17-15931012ecbe
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
-    servername: cache-hk-1.cn-db.top
+    network: ws
+    ws-opts:
+      path: /debian
+      headers:
+        host: data-us-v1.shwjfkw.cn
+  - &id026
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: 104.26.5.57
+    port: 2095
+    cipher: auto
+    uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id027
+    name: 🇨🇳_CN_中国->🇭🇰_HK_香港
+    type: vmess
+    server: 223.113.130.55
+    port: 52052
+    cipher: auto
+    uuid: c7395784-c77d-390a-9db6-67152462b95b
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
     network: ws
     ws-opts:
       path: /db00
       headers:
         host: cache-hk-1.cn-db.top
-  - &id026
-    name: 🇨🇭_CH_瑞士->🇭🇰_HK_香港_3
-    type: vmess
-    server: 64.110.65.177
-    port: 25857
-    cipher: auto
-    uuid: 414365d6-12fb-3530-8135-ad14b8ad7726
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: data-hk-3.cn-db.top
-    network: ws
-    ws-opts:
-      path: /db00
-      headers:
-        host: data-hk-3.cn-db.top
-  - &id027
-    name: 🇰🇷_KR_韩国->🇭🇰_HK_香港_2
-    type: vmess
-    server: 130.162.151.122
-    port: 32453
-    cipher: auto
-    uuid: 414365d6-12fb-3530-8135-ad14b8ad7726
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: cache-hk-2.cn-db.top
-    network: ws
-    ws-opts:
-      path: /db00
-      headers:
-        host: cache-hk-2.cn-db.top
   - &id028
-    name: 🇨🇭_CH_瑞士->🇭🇰_HK_香港_4
+    name: 🇨🇭_CH_瑞士
     type: vmess
-    server: 64.110.78.246
-    port: 45703
+    server: 94.131.99.8
+    port: 47182
     cipher: auto
-    uuid: 414365d6-12fb-3530-8135-ad14b8ad7726
+    uuid: 81b2b630-8b6a-404f-b996-b12f13db5786
     alterId: 0
-    tls: true
+    tls: false
     skip-cert-verify: true
-    servername: data-hk-1.cn-db.top
-    network: ws
-    ws-opts:
-      path: /db00
-      headers:
-        host: data-hk-1.cn-db.top
+    network: tcp
   - &id029
-    name: 🇺🇸_US_美国_2
+    name: 🇺🇸_US_美国_5
     type: vmess
-    server: 2.namesilo123.top
+    server: 104.21.221.197
     port: 80
     cipher: auto
-    uuid: 4d68da82-e8d0-4eaa-aec9-0df4a23e1a04
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -385,96 +376,14 @@ proxies:
     ws-opts:
       path: /?ed=2048
       headers:
-        host: freezhang.sanfen002.top
+        host: a.prapt1.ir
   - &id030
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 27.namesilo123.top
-    port: 8880
-    cipher: auto
-    uuid: 4d68da82-e8d0-4eaa-aec9-0df4a23e1a04
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: freezhang.sanfen002.top
-  - &id031
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 15.namesilo123.top
-    port: 2082
-    cipher: auto
-    uuid: 4d68da82-e8d0-4eaa-aec9-0df4a23e1a04
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: freezhang.sanfen002.top
-  - &id032
-    name: 🇨🇭_CH_瑞士->🇭🇰_HK_香港_5
-    type: vmess
-    server: 64.110.78.246
-    port: 21203
-    cipher: auto
-    uuid: 414365d6-12fb-3530-8135-ad14b8ad7726
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    servername: data-hk-3.cn-db.top
-    network: ws
-    ws-opts:
-      path: /db00
-      headers:
-        host: data-hk-3.cn-db.top
-  - &id033
-    name: 🇺🇸_US_美国_5
-    type: trojan
-    server: 2usmax01.170203.xyz
-    port: 7454
-    udp: true
-    password: 7e5f9c76-bda8-4f0c-8113-36078efec3c9
-    sni: 2usmax01.170203.xyz
-    skip-cert-verify: true
-    network: tcp
-  - &id034
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_12
-    type: vmess
-    server: 183.232.170.22
-    port: 30057
-    cipher: auto
-    uuid: 5635bc13-e51c-4381-ae56-949406fbd3ba
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id035
     name: 🇺🇸_US_美国_6
     type: vmess
-    server: 172.67.177.106
-    port: 2082
-    cipher: auto
-    uuid: 4d68da82-e8d0-4eaa-aec9-0df4a23e1a04
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /?ed=2048
-      headers:
-        host: freezhang.sanfen002.top
-  - &id036
-    name: 🇺🇸_US_美国->🇩🇪_DE_德国
-    type: vmess
-    server: 104.21.20.19
+    server: 104.21.236.63
     port: 80
     cipher: auto
-    uuid: 4be6650b-41be-4878-a28e-553fc4fb73e8
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -482,52 +391,37 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: de2.xv2ray.net
-  - &id037
-    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
+        host: a.prapt1.ir
+  - &id031
+    name: 🇺🇸_US_美国_7
     type: vmess
-    server: 162.159.137.249
+    server: 104.26.4.57
+    port: 2095
+    cipher: auto
+    uuid: 6658a3a6-225a-4d33-a5d2-82cfde565b4e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id032
+    name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
+    type: vmess
+    server: fbi.gov
     port: 8080
     cipher: auto
-    uuid: 028c8131-9e3e-4836-94ac-ea7f24d4d05a
+    uuid: ef8c954e-014f-4b36-8273-9b5086afab34
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: 028c8131-9e3e-4836-94ac-ea7f24d4d05a-vm
+      path: ef8c954e-014f-4b36-8273-9b5086afab34-vm
       headers:
-        host: nest-emily-healing-h.trycloudflare.com
-  - &id038
-    name: 🇩🇪_DE_德国_1
-    type: vmess
-    server: 80.71.157.105
-    port: 80
-    cipher: auto
-    uuid: b656b441-2cfd-44b8-9b2e-646e9925f8f6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: نام.کانال.تلگرام.VPNHTTPInjectorfree
-  - &id039
-    name: 🇩🇪_DE_德国_2
-    type: vmess
-    server: cloudflare.cfgo.cc
-    port: 80
-    cipher: auto
-    uuid: 22a13aa2-4854-44cb-e090-ec71ab84b1ff
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: wap.hostmjj.com
+        host: bibliographic-sword-sequence-advertisers.trycloudflare.com
 proxy-groups:
   - name: PROXY
     type: select
@@ -586,13 +480,6 @@ proxy-groups:
       - *id030
       - *id031
       - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -630,13 +517,6 @@ proxy-groups:
       - *id030
       - *id031
       - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
   - name: SELECT
     type: select
     proxies:
@@ -672,13 +552,6 @@ proxy-groups:
       - *id030
       - *id031
       - *id032
-      - *id033
-      - *id034
-      - *id035
-      - *id036
-      - *id037
-      - *id038
-      - *id039
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
